# minecraft-reborn

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json  开发计划.md
shaders/: CMakeLists.txt  block.frag  block.vert  break_overlay.frag  break_overlay.vert  chunk.frag  chunk.frag.spv  chunk.vert  chunk.vert.spv  cloud.frag  cloud.vert  debug.frag  debug.vert  entity.frag  entity.vert  gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  moon.frag  moon.frag.spv  moon.vert  moon.vert.spv  particle.frag  particle.vert  sky.frag  sky.frag.spv  sky.vert  sky.vert.spv  star.frag  star.frag.spv  star.vert  star.vert.spv  sun.frag  sun.frag.spv  sun.vert  sun.vert.spv  test_triangle.frag  test_triangle.vert  test_triangle.vert.spv  (+5 more)
src/client/: CMakeLists.txt  main.cpp
src/client/application/: ClientApplication.cpp  ClientApplication.hpp
src/client/chat/: ChatHistory.cpp  ChatHistory.hpp
src/client/input/: InputManager.cpp  InputManager.hpp
src/client/network/: NetworkClient.cpp  NetworkClient.hpp
src/client/renderer/: Camera.cpp  Camera.hpp  ChunkMesher.cpp  ChunkMesher.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  DefaultTextureAtlas.cpp  DefaultTextureAtlas.hpp  Descriptor.cpp  Descriptor.hpp  MeshTypes.cpp  MeshTypes.hpp  MeshWorkerPool.cpp  MeshWorkerPool.hpp  ShaderPath.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanUtils.hpp
src/client/resource/: BlockModelCache.cpp  BlockModelCache.hpp  BlockModelLoader.cpp  BlockModelLoader.hpp  BlockStateLoader.cpp  BlockStateLoader.hpp  DefaultResources.cpp  DefaultResources.hpp  DestroyStageTextures.cpp  DestroyStageTextures.hpp  EntityTextureLoader.cpp  EntityTextureLoader.hpp  ItemTextureAtlas.cpp  ItemTextureAtlas.hpp  ResourceManager.cpp  ResourceManager.hpp  TextureAtlasBuilder.cpp  TextureAtlasBuilder.hpp
src/client/settings/: ClientSettings.cpp  ClientSettings.hpp
src/client/ui/: DebugScreen.cpp  DebugScreen.hpp  DefaultAsciiFont.cpp  DefaultAsciiFont.hpp  Font.cpp  Font.hpp  FontRenderer.cpp  FontRenderer.hpp  FontTextureAtlas.cpp  FontTextureAtlas.hpp  Glyph.hpp  GuiRenderer.cpp  GuiRenderer.hpp  TridentCanvas.cpp  TridentCanvas.hpp
src/client/window/: Window.cpp  Window.hpp
src/client/world/: ClientWeather.hpp  ClientWorld.cpp  ClientWorld.hpp
src/common/: CMakeLists.txt
src/common/command/: CommandContext.hpp  CommandDispatcher.hpp  CommandNode.hpp  CommandResult.hpp  CommandSource.hpp  ICommandSource.hpp  StringReader.hpp
src/common/core/: BlockRaycastResult.hpp  Constants.hpp  EnumSet.hpp  Result.cpp  Result.hpp  Types.hpp
src/common/entity/: DataParameter.hpp  Entity.cpp  Entity.hpp  EntityClassification.cpp  EntityClassification.hpp  EntityDataManager.hpp  EntityPose.hpp  EntityRegistry.hpp  EntitySize.hpp  EntitySpawnPlacementRegistry.cpp  EntitySpawnPlacementRegistry.hpp  EntityType.cpp  EntityType.hpp  EntityUtils.hpp  GameModeUtils.cpp  GameModeUtils.hpp  ItemEntity.cpp  ItemEntity.hpp  MoverType.hpp  Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  VanillaEntities.hpp
src/common/input/: KeyBinding.cpp  KeyBinding.hpp
src/common/item/: BlockItem.cpp  BlockItem.hpp  BlockItemRegistry.cpp  BlockItemRegistry.hpp  BlockItemUseContext.cpp  BlockItemUseContext.hpp  Item.cpp  Item.hpp  ItemRegistry.cpp  ItemRegistry.hpp  ItemStack.cpp  ItemStack.hpp  ItemUseContext.cpp  ItemUseContext.hpp  Items.cpp  Items.hpp
src/common/math/: MathUtils.cpp  MathUtils.hpp  Noise.cpp  Noise.hpp  Vector3.hpp
src/common/network/: ChunkSync.cpp  ChunkSync.hpp  ContainerPacketHandler.cpp  ContainerPacketHandler.hpp  EntityMetadataSerializer.cpp  EntityMetadataSerializer.hpp  EntityPackets.cpp  EntityPackets.hpp  GameStateChangePacket.hpp  IServerConnection.hpp  InventoryPackets.cpp  InventoryPackets.hpp  LocalConnection.cpp  LocalConnection.hpp  LocalServerConnection.cpp  LocalServerConnection.hpp  Packet.cpp  Packet.hpp  PacketSerializer.cpp  PacketSerializer.hpp  ProtocolPackets.hpp  RecipePackets.hpp
src/common/perfetto/: CMakeLists.txt  PerfettoConfig.hpp  PerfettoManager.cpp  PerfettoManager.hpp  TraceCategories.cpp  TraceCategories.hpp  TraceEvents.hpp
src/common/physics/: CollisionCache.cpp  CollisionCache.hpp  PhysicsConstants.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp
src/common/renderer/: ChunkMesher.cpp  ChunkMesher.hpp  MeshTypes.cpp  MeshTypes.hpp
src/common/resource/: FolderResourcePack.cpp  FolderResourcePack.hpp  IResourcePack.cpp  IResourcePack.hpp  InMemoryResourcePack.cpp  InMemoryResourcePack.hpp  PackMetadata.cpp  PackMetadata.hpp  ResourceLocation.cpp  ResourceLocation.hpp  ResourcePackList.cpp  (+5 more)
src/server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/client/: test_mesh_worker_pool.cpp
tests/common/: SettingsTest.cpp  test_biome.cpp  test_block.cpp  test_block_item.cpp  test_blockid.cpp  test_carver.cpp  test_chunk_generation.cpp  test_chunkloadticket.cpp  test_chunksync.cpp  test_collision.cpp  test_container.cpp  test_core.cpp  test_decoration_stage.cpp  test_entity.cpp  test_inventory.cpp  test_item.cpp  test_item_entity.cpp  test_localconnection.cpp  test_math.cpp  test_network.cpp  test_noise.cpp  test_ore_feature.cpp  test_property.cpp  test_renderer.cpp  test_surface.cpp  test_tick_manager.cpp  test_time.cpp  test_tree_feature.cpp  test_world.cpp
tests/entity/: AttributeTests.cpp  EntityCoreTests.cpp  GoalTests.cpp  LivingEntityTests.cpp  PathfindingTests.cpp  RandomWalkingGoalTest.cpp
tests/lighting/: LightUpdateTest.cpp  LightingTest.cpp
tests/network/: EntityPacketsTest.cpp  LocalServerConnectionTest.cpp
tests/physics/: CollisionCacheTests.cpp
tests/server/: LightSyncTests.cpp  ServerChunkManagerCallbackTest.cpp  ServerWorldCollisionTests.cpp  ServerWorldTest.cpp  test_chunk_worker_pool.cpp  test_integrated_server.cpp  test_server_chunk_manager.cpp
(+935 files in other folders)
